Updated portfolio with recent changes july_4_2025-1

--- a/index.html
+++ b/index.html
@@ -941,6 +941,21 @@
                   src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM.jpeg"
                   alt="Login With Face"
                 />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (1).jpeg"
+                  alt="Login With Face"
+                />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (2).jpeg"
+                  alt="Login With Face"
+                />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (3).jpeg"
+                  alt="Login With Face"
+                />
 
                 <span id="leftArrow4" class="slideshowArrow">&#8249;</span>
                 <span id="rightArrow4" class="slideshowArrow">&#8250;</span>
