Updated portfolio with recent changes july_4_2025-1

--- a/index.html
+++ b/index.html
@@ -159,13 +159,34 @@
                 <div class="skill-item">
                   <span>Cybersecurity</span>
                   <div class="progress">
-                    <div class="progress-bar" style="width: 80%"></div>
+                    <div class="progress-bar" style="width: 90%"></div>
                   </div>
                 </div>
+                                <div class="skill-item">
+                  <span>C</span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <span>C++</span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 70%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <span>Kali Linux</span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 90%"></div>
+                  </div>
+                </div>
+
                 <div class="skill-item">
                   <span>Machine Learning</span>
                   <div class="progress">
-                    <div class="progress-bar" style="width: 75%"></div>
+                    <div class="progress-bar" style="width: 50%"></div>
                   </div>
                 </div>
               </div>
