--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-lg-6" data-aos="fade-left">
             <div class="hero-image-container">
               <img
-                src="images/img1.jpg"
+                src="images/profile.jpeg"
                 alt="Arun Adhikari"
                 class="hero-image"
               />
