--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
           <div class="timeline-item" data-aos="fade-up">
             <div class="timeline-date">2023</div>
             <div class="timeline-content">
-              <h3>1st Prize - Visinory Hackathon</h3>
+              <h3>1st Prize - visionary Hackathon</h3>
               <p>
-                Won first prize in Visinory Hackathon organized by Visinory Club
+                Won first prize in visionary Hackathon organized by visionary Club
                 in the domain of Cyber Security.
               </p>
               <a
@@ -241,9 +241,9 @@
           <div class="timeline-item" data-aos="fade-up" data-aos-delay="100">
             <div class="timeline-date">2024</div>
             <div class="timeline-content">
-              <h3>3rd Position - Visinory Techfest Hackathon</h3>
+              <h3>3rd Position - visionary Techfest Hackathon</h3>
               <p>
-                Won 3rd position in Visinory Techfest Hackathon 2024 organized
+                Won 3rd position in visionary Techfest Hackathon 2024 organized
                 by Vishwakarma University in collaboration with Binghamton
                 University, New York.
               </p>
@@ -318,10 +318,10 @@
             >
               <img
                 src="/cert/hackathon cert/cyber_2023_winner_visio.png"
-                alt="Visinory Hackathon"
+                alt="visionary Hackathon"
               />
               <div class="certificate-overlay">
-                <h4>Visinory Hackathon</h4>
+                <h4>visionary Hackathon</h4>
                 <p>1st Prize Winner</p>
               </div>
             </div>
