--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                 information and systems in today's interconnected world.
               </p>
 
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7e3a9bb1-8339-44dc-980e-227c10322505" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d1d8a921-671d-443b-882c-f7f7646213f7" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1de31019-e650-4013-8b13-d4c69f321f91" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="fd40a1d2-a902-42a8-8397-6c172ca1ce55" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
               <div class="skills">
                 <h4>My Skills</h4>
                 <div class="skill-item">
