--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </p>
             <div class="hero-buttons">
               <a href="#contact" class="btn btn-primary me-3">Contact Me</a>
-              <a href="/Arun resume 20_5_25.pdf" class="btn btn-outline-light"
+              <a href="/Arun Resume updated 01.pdf" class="btn btn-outline-light"
                 >Download CV</a
               >
             </div>
