Billing update feb 2026

--- a/index.html
+++ b/index.html
@@ -550,6 +550,34 @@
             </div>
           </div>
 
+          <!--project 6 card -->
+          <div
+            class="col-lg-4 col-md-6"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+            <div class="project-card">
+              <div class="project-image">
+                <img src="/images/billing-1.png" alt="billing-dshboard" />
+              </div>
+              <div class="project-content">
+                <h3>Pharmavy Billing Software</h3>
+                <p>
+                  Pharmacy billling software built using python. Can be used for inventory management,
+                  billing and sending the receipts by mail or whatsapp.
+                  <!-- Python-based AI assistant capable of various day-to-day tasks
+                  with API integration. -->
+                </p>
+                <button
+                  class="btn btn-primary view-project-btn"
+                  data-project="project6"
+                >
+                  View Project
+                </button>
+              </div>
+            </div>
+          </div>
+          
           <!-- Project 3 Card -->
           <div
             class="col-lg-4 col-md-6"
@@ -957,6 +985,94 @@
                   <b>User Portal Access:</b> Upon successful face recognition,
                   the user is directed to their personalized user portal,
                   providing a seamless and secure login experience.
+                </li>
+              </ul>
+
+              <div class="slideshowContainer">
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM.jpeg"
+                  alt="Login With Face"
+                />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (1).jpeg"
+                  alt="Login With Face"
+                />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (2).jpeg"
+                  alt="Login With Face"
+                />
+                <img
+                  class="imageSlides"
+                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (3).jpeg"
+                  alt="Login With Face"
+                />
+
+                <span id="leftArrow4" class="slideshowArrow">&#8249;</span>
+                <span id="rightArrow4" class="slideshowArrow">&#8250;</span>
+
+                <div class="slideshowCircles">
+                  <span class="circle dot"></span>
+                </div>
+              </div>
+
+              <div class="project-actions">
+                <a href="#" class="btn btn-primary" target="_blank">
+                  <i class="fab fa-github"></i> View Code
+                </a>
+                <button class="btn btn-outline-light btn-close-details">
+                  <i class="fas fa-arrow-left"></i> Back to Projects
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- project 6 details -->
+          <div
+            id="project4-details"
+            class="project-details"
+            style="display: none"
+          >
+            <div class="project-header">
+              <h2>Pharmacy Billing Software</h2>
+              <button class="btn btn-close-details">
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+
+            <div class="project-body">
+              <h3>Project Overview</h3>
+              <p>
+                Billing software that can be used to manage inventory,create bill and send bill
+                using email or whatsapp to the customer.
+              </p>
+
+              <h3>How It Works</h3>
+              <ul>
+                <li>
+                  <b>Inventory Management:</b> Medicines are stored in the sqlite database. software 
+                  produces a alert when the stock is less or if the medicines are going to expire.
+                  expiry date can be set in the inventory section of the software.
+                </li>
+                <li>
+                  <b>Main Dashboard: </b> All the important details like low stock alert, expiry alert of the medicine are shown in the dashboard.
+                  It also shows the total sales analysis and daily report in the dashboard.
+                </li>
+                <li>
+                  <b>Analysis/ report generation:</b> Monthly sales report, Stock report and sales report ca be 
+                  generated in the report sction of the software.
+                </li>
+                <li>
+                  <b>Backup and Restore:</b>Data is automatically backed up after every 12
+                  hours and privious backup of 7 days are kept. 
+                </li>
+                <li>
+                  <b>Sending bills :</b>Generated bills are saved in the PDF format in the PC. Bills can be sent to customer through email or whatsapp.
+                  bills are automatically uploaded to cloud for the backup.
+                  technologies used for sending mail: Google SMTP mail protocol 
+                  for sending in Whatsapp: Meta buisness whatsapp account.
                 </li>
               </ul>
 
