billing-software-update

--- a/index.html
+++ b/index.html
@@ -1079,22 +1079,22 @@
               <div class="slideshowContainer">
                 <img
                   class="imageSlides"
-                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM.jpeg"
+                  <!-- src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM.jpeg" -->
                   alt="Login With Face"
                 />
                 <img
                   class="imageSlides"
-                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (1).jpeg"
+                  <!-- src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (1).jpeg" -->
                   alt="Login With Face"
                 />
                 <img
                   class="imageSlides"
-                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (2).jpeg"
+                  <!-- src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (2).jpeg" -->
                   alt="Login With Face"
                 />
                 <img
                   class="imageSlides"
-                  src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (3).jpeg"
+                  <!-- src="/images/wl/WhatsApp Image 2024-05-25 at 11.50.31 AM (3).jpeg" -->
                   alt="Login With Face"
                 />
 
@@ -1107,7 +1107,9 @@
               </div>
 
               <div class="project-actions">
-                <a href="#" class="btn btn-primary" target="_blank">
+                <a href="https://github.com/Arun7303/Pharmacy-Billing-software-" 
+                  class="btn btn-primary" 
+                  target="_blank">
                   <i class="fab fa-github"></i> View Code
                 </a>
                 <button class="btn btn-outline-light btn-close-details">
